<resources>
    <string name="app_name">My pocket cellar</string>
    <string name="about_mail" translatable="false">myadridev@gmail.com</string>
    <string name="about_mail_uri" translatable="false">mailto:</string>
    <string name="about_sources_url" translatable="false">https://github.com/adridevparis/MyPocketCave</string>
    <string name="about_version_default" translatable="false">-</string>
    <string name="about_version">Version</string>
    <string name="about">About</string>
    <string name="about_browser_choice_label">Open link with</string>
    <string name="about_contact">Contact</string>
    <string name="about_license">License</string>
    <string name="about_mail_client_choice_label">Send mail with</string>
    <string name="about_sources">See sources on Github</string>
    <string name="about_version_prefix">v</string>
    <string name="bottle_detail_comments">No comments!</string>
    <string name="bottle_delete_confirmation">Do we remove it? If it is only temporary, a 0 stock is enough and prevents to re-do all this next time</string>
    <string name="bottle_detail_food">Nothing to eat with</string>
    <string name="bottle_detail_person">To drink without anyone to disturb</string>
    <string name="bottle_domain">Domain</string>
    <string name="bottle_edit_comments">Comments</string>
    <string name="bottle_edit_food">What to eat with</string>
    <string name="bottle_edit_person">Who to share it with</string>
    <string name="bottle_name">Name of the bottle</string>
    <string name="bottle_stock">Stock</string>
    <string name="bottle_recap">%1$s, %2$s</string>
    <plurals name="bottles_count">
        <item quantity="one">Total:\u00A0%1$d bottle</item>
        <item quantity="other">Total:\u00A0%1$d bottles</item>
    </plurals>
    <plurals name="bottles_count_placed">
        <item quantity="one">Placed:\u00A0%1$d</item>
        <item quantity="other">Placed:\u00A0%1$d</item>
    </plurals>
    <string name="bottles_count_detail">Red:\u00A0%1$d, White:\u00A0%2$d, Rosé:\u00A0%3$d, Champagne:\u00A0%4$d</string>
    <string name="bottles_stock">%1$d in stock</string>
    <string name="error_bottle_already_exists">There is the same bottle in the cellar (same domain, color, name and millesime).</string>
    <string name="global_merge">Merge</string>
    <string name="error_bottle_no_name">A bottle name is needed</string>
    <string name="global_ok">OK</string>
    <string name="filename_bottles" translatable="false">bottles</string>
    <string name="food_aperitif">Aperitif</string>
    <string name="food_cheese">Cheese</string>
    <string name="food_dessert">Dessert</string>
    <string name="food_exotic">Exotic food</string>
    <string name="food_fish">Fish - see food</string>
    <string name="food_game">Game</string>
    <string name="food_giblet">Giblet</string>
    <string name="food_pasta">Pasta</string>
    <string name="food_pork_product">Pork products</string>
    <string name="food_poultry">Poultry</string>
    <string name="food_red_meat">Red meat</string>
    <string name="food_salad">Salad - raw vegetables</string>
    <string name="food_salty_sweet">Salty sweet food</string>
    <string name="food_soup">Soup</string>
    <string name="food_starter">Starter</string>
    <string name="food_vegetable">Vegetable - side dish</string>
    <string name="food_white_meat">White meat</string>
    <string name="global_no">Let\'s keep it!</string>
    <string name="global_yes">Let\'s remove it!</string>
    <string name="no_bottles">No bottles in the cellar, so sad!</string>
    <string name="no_caves">No cellar created, efforts are needed!</string>
    <string name="no_millesime">No millesime</string>
    <string name="store_indexes" translatable="false">indexes</string>
    <string name="store_bottle" translatable="false">bottle_%1$d</string>
    <string name="suggest_me_a_bottle_button">Please, suggest me a bottle</string>
    <string name="title_about">About</string>
    <string name="title_bottles">My bottles</string>
    <string name="title_caves">My cellars</string>
    <string name="title_create_bottle">Add a bottle</string>
    <string name="title_edit_bottle">Edit the bottle</string>
    <string name="title_main">My pocket cellar</string>
    <string name="title_suggest_bottle_search">Suggest me a bottle</string>
    <string name="wine_color_champagne">Champagne</string>
    <string name="wine_color_red">Red</string>
    <string name="wine_color_rose">Rosé</string>
    <string name="wine_color_white">White</string>
    <string name="about_license_detail">"THE BEER-WARE LICENSE" (Revision 42): <![CDATA[<myadridev@gmail.com>]]> wrote this file. As long as you retain this notice you can do whatever you want with this stuff. If we meet some day, and you think this stuff is worth it, you can buy me a beer in return Adrien</string>
    <string name="about_license_value">The Beer-ware license</string>
    <string name="suggest_bottle_essential">Must have?</string>
    <string name="suggest_bottle_search">Here we go!</string>
    <string name="suggest_bottle_search_criteria">What are we looking for?</string>
    <string name="wine_color_none">Any color</string>
    <string name="suggest_bottle_person_none">To drink with anyone</string>
    <string name="suggest_bottle_domain_none">Any domain</string>
    <string name="millesime_none">Any millesime</string>
    <string name="millesime_less_than_two"><![CDATA[<]]> 3 years</string>
    <string name="millesime_three_to_five">3 – 5 years</string>
    <string name="millesime_six_to_ten">6 – 10 years</string>
    <string name="millesime_over_ten"><![CDATA[>]]> 10 years</string>
    <string name="food_none">To drink with anything</string>
    <string name="error_technical">There was a technical error, please try again!</string>
    <string name="title_suggest_bottle_result">Suggest me a bottle</string>
    <string name="suggest_bottle_result_no_bottles">No matching bottle!</string>
    <string name="suggest_bottle_result_show_more">See more (not all the criteria)</string>
    <plurals name="bottle_result_not_all_criteria_number_label">
        <item quantity="one">%1$d result (not all criteria)</item>
        <item quantity="other">%1$d results (not all criteria)</item>
    </plurals>
    <plurals name="bottle_result_all_criteria_number_label">
        <item quantity="one">%1$d result (all criteria)</item>
        <item quantity="other">%1$d results (all criteria)</item>
    </plurals>
    <plurals name="bottle_number_label">
        <item quantity="one">%1$d reference</item>
        <item quantity="other">%1$d references</item>
    </plurals>
    <string name="error_suggest_wine_color">No wine color but checked as required</string>
    <string name="error_suggest_domain">No domain but checked as required</string>
    <string name="error_suggest_millesime">No millesime but checked as required</string>
    <string name="error_suggest_food">Nothing to eat with but checked as required</string>
    <string name="error_suggest_person">Nobody to drink with but checked</string>
    <string name="cave_type_none">Any type of cellar</string>
    <string name="cave_type_bulk">Bulk storage</string>
    <string name="cave_type_box">Boxes</string>
    <string name="cave_type_fridge">Fridge cellar</string>
    <string name="cave_type_rack">Bottle racks</string>
    <plurals name="caves_count">
        <item quantity="one">Total:\u00A0%1$d cellar</item>
        <item quantity="other">Total:\u00A0%1$d cellars</item>
    </plurals>
    <string name="caves_count_detail">Bulk:\u00A0%1$d, Boxes:\u00A0%2$d, Fridge:\u00A0%3$d, Rack:\u00A0%4$d</string>
    <string name="filename_caves" translatable="false">caves</string>
    <string name="store_caves" translatable="false">caves</string>
    <plurals name="cave_used_capacity">
        <item quantity="one">%1$d bt. / %2$d place</item>
        <item quantity="other">%1$d bt. / %2$d places</item>
    </plurals>
    <plurals name="cave_number_bottles">
        <item quantity="one">%1$d bottle</item>
        <item quantity="other">%1$d bottles</item>
    </plurals>
    <string name="cave_name">Name of the cellar</string>
    <string name="error_cave_already_exists">There exists a similar cellar (same name and type).</string>
    <string name="error_cave_go">Let\'s go!</string>
    <string name="title_create_cave">Add a cellar</string>
    <string name="title_edit_cave">Edit the cellar</string>
    <string name="error_cave_no_name">A cellar name is needed</string>
    <string name="cave_delete_confirmation">Do we remove it? The bottles placed in it will not be placed anymore</string>
    <string name="cave_not_found_delete_confirmation">Cave not found, it will be removed. The bottles placed in it will not be placed anymore</string>
    <string name="bottle_not_found_delete_confirmation">Bottle not found, it will be removed</string>
    <string name="global_stay_and_fix">Stay here and fix it</string>
    <string name="global_stay">Stay here</string>
    <string name="global_cancel">Cancel</string>
    <string name="global_exit">Exit</string>
    <string name="global_exit_confirmation">Do we exit and go open the bottles?</string>
    <string name="pattern_type_linear">Linear</string>
    <string name="pattern_type_staggered_rows">In staggered rows</string>
    <string name="pattern_type_free">Free</string>
    <string name="cave_arrangement">Arrangement</string>
    <plurals name="cave_boxes_number_detail">
        <item quantity="one">%1$d box</item>
        <item quantity="other">%1$d boxes</item>
    </plurals>
    <plurals name="cave_boxes_bottles_number_detail">
        <item quantity="one">%1$d bottle per box</item>
        <item quantity="other">%1$d bottles per box</item>
    </plurals>
    <string name="cave_bulk_bottles_number_edit">Number of bottles</string>
    <string name="cave_boxes_number_edit">Number of boxes</string>
    <string name="cave_boxes_bottles_number_edit">Number of bottles per box</string>
    <string name="filename_patterns" translatable="false">patterns</string>
    <string name="store_patterns" translatable="false">patterns</string>
    <string name="title_select_pattern">Recent patterns</string>
    <string name="title_create_pattern">New pattern</string>
    <string name="pattern_name">Name of the pattern</string>
    <string name="create_pattern_number_bottles_by_column">Bottles by column</string>
    <string name="create_pattern_number_bottles_by_row">Bottles by row</string>
    <string name="create_pattern_vertically_expendable">Is vertically expendable</string>
    <string name="create_pattern_horizontally_expendable">Is horizontally expendable</string>
    <string name="create_pattern_overview">Pattern overview</string>
    <string name="cave_edit_box_pattern_overview">Pattern overview of each box</string>
    <string name="create_pattern_invert">Invert pattern</string>
    <string name="error_pattern_incorrect_rows_cols">Number of bottles by row and column should be greater than 0</string>
    <string name="no_bottles_to_add">All bottles are already in cellars, great!</string>
    <string name="bottles_to_place">%1$d to place</string>
    <string name="title_place_bottle">Place a bottle</string>
    <plurals name="bottles_placed">
        <item quantity="one">%1$d placed in the cellars</item>
        <item quantity="other">%1$d placed in the cellars</item>
    </plurals>
    <string name="store_cave" translatable="false">cave_%1$d</string>
    <string name="store_pattern" translatable="false">pattern_%1$d</string>
    <string name="see_bottle_detail">See detail</string>
    <string name="drink_bottle">Drink!</string>
    <string name="unplace_bottle">Remove this bottle from here</string>
    <string name="resize_pattern">Expand or reduce pattern</string>
    <string name="change_pattern">Replace pattern</string>
    <string name="remove_pattern">Delete pattern</string>
</resources>