<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/alert_resize_pattern"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:text="@string/resize_pattern"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/alert_change_pattern"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/alert_resize_pattern"
        android:padding="10dp"
        android:text="@string/change_pattern"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/alert_remove_pattern"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/alert_change_pattern"
        android:padding="10dp"
        android:text="@string/remove_pattern"
        android:textSize="18sp" />

</android.support.percent.PercentRelativeLayout>